--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -96,6 +96,67 @@
 </header>
 <!-- /Header -->
 
+<!-- Menu -->
+<!-- <div class="menu">
+  <div class="container">
+  <div class="row">
+    <div class="col-md-2">
+    <h1>MENU</h1>
+  </div>
+  <div class="col-md-9"></div>
+  <div class="col-md-1">
+    <div class="style">
+    <span> x </span> 
+  </div>
+  </div>
+  </div>
+  <div class="row">
+    <div class="col-md-1 icon">
+      <fa-icon [icon]="['fas','home']"></fa-icon>
+    </div>
+    <div class="col-md-2">
+      <h2>SERVICES</h2>
+      <ul class="links">
+        <li><a routerLink="/services/user-experience">User Experience</a></li>
+        <li><a routerLink="/services/interface-design">Interface Design</a></li>
+        <li><a routerLink="/services/ui-dev">UI Development</a></li>
+        <li><a routerLink="/services/end-to-end">End-to-End Development</a></li>
+        <li><a routerLink="/services/usability-testing">Usability Testing</a></li>
+      </ul>
+    </div>
+    <div class="col-md-2">
+      <h2>CASE STUDIES</h2>
+      <ul class="links">
+        <li><a routerLink="/projects/event-management">Event Management</a></li>
+        <li><a routerLink="/projects/networking">Network Scalability</a></li>
+        <li><a routerLink="/projects/skill-development">Skill Development</a></li>
+        <li><a routerLink="/projects/social-review">Social Marketing</a></li>
+        <li><a routerLink="/projects/health">Healthy Buy</a></li>
+        <li><a routerLink="/projects/construction">Construction Portal</a></li>
+        <li><a routerLink="/projects/marketing">Website for startup</a></li>
+        <li><a routerLink="/projects/child-care">Child Care Portal</a></li>
+        <li><a routerLink="/projects/health-care">Health Care System</a></li>
+        <li><a routerLink="/projects/automobile-usability">Automobile Usability</a></li>
+      </ul>
+    </div>
+    <div class="col-md-2">
+      <h2>CONTACT US</h2>
+      <ul class="links">
+        <li><a routerLink="/contact-us">Project Enquire</a></li>
+        <li><a routerLink="/careers">Careers</a></li>
+      </ul>
+    </div>
+    <div class="col-md-2">
+      <h3 routerLink="/about-us">ABOUT US</h3>
+    </div>
+    <div class="col-md-2">
+      <h3 routerLink="/blog">BLOG</h3>
+    </div>
+  </div>
+</div>
+</div> -->
+<!-- Menu -->
+
 <div id="main-content">
   <router-outlet (deactivate)="onDeactivate()"></router-outlet>
 </div>
