--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -5,10 +5,10 @@
   <div class="about">
       <div class="container">
           <div class="row">
-              <div class="col-md-2">
+              <div class="col-md-3">
                 <h2>We Love Working With</h2>
               </div>
-              <div class="col-md-1"></div>
+              <!-- <div class="col-md-1"></div> -->
               <div class="col-md-4">
                 <div class="image">
                 <img src="/assets/images/about-us/start-up.svg" />
