--- a/src/app/components/careers/careers.component.html
+++ b/src/app/components/careers/careers.component.html
@@ -31,7 +31,7 @@
       </aside>
       <main>
           <div class="form-header">
-              <h3>Hey, we always Welcome<span class="blackterm"> Onboard new Talents</span></h3>
+              <h3><span class="blackterm">Hey, we always Welcome Onboard new Talents</span></h3>
               <p>You can apply if you are</p>
               <div class="applying-for">
                 <button class="btn" [class.checked]="item.checked" (click)="togglePosition(item)" *ngFor="let item of items;"><span>&times;</span> {{ item.name }}</button>
