--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -31,7 +31,7 @@
           </aside>
             <main>
                 <div class="form-header">
-                    <h3>Hello! <span class="blackterm">You can leave a message</span></h3>
+                    <h3><span class="blackterm">Hello! You can leave a message</span></h3>
                     <p>Our team will reach out to you</p>
                 </div>
                 <form [formGroup]="form" (ngSubmit)="onSubmit()" [class.ng-submitted]="submitted">
