--- a/src/app/components/our-team/our-team.component.html
+++ b/src/app/components/our-team/our-team.component.html
@@ -5,8 +5,8 @@
 <div class="container">
 <div class="row">
   <div class="col-sm-6">
-    <h2>"There's always a<span class="highlight"> better</span> way to do it - </h2>
-    <h2>- and we <span class="highlight">find</span> it"</h2>
+    <h2>"There's always a better way to do it - </h2>
+    <h2>- and we find it"</h2>
    <p>- originally said by Thomas Alva Edison</p>
   </div>
   <div class="col-sm-1"></div>
