--- a/src/app/components/projects/app-development/app-development.component.html
+++ b/src/app/components/projects/app-development/app-development.component.html
@@ -4,10 +4,10 @@
     <div class="row">
       <div class="col-md-4">
         <div class="case-study">
-          <p>CASE STUDY</p>
+          <p>Case Study</p>
         </div>
         <div class="heading">
-          <h1><span class="text-primary">APP</span> DEVELOPMENT</h1>
+          <h1>App Development</h1>
           <p>Platform for designers, design aspirants/students, mentor to collaborate and share their ideology, design method, process and uplift their skills in the Design domain.</p>
         </div>
           <div class="web">
@@ -34,7 +34,7 @@
   <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-5">
-         <h1>ABOUT PROJECT</h1>
+         <h1>About Project</h1>
     </div>
     <div class="col-md-6">
         <p>The user base was scattered across multiple segments of "Students, Mentors, Designers" the requirement 
@@ -51,7 +51,7 @@
 <!-- Platform we used -->
 <section class="platform">
   <div class="container">
-    <h1>PLATFORM WE USED</h1>
+    <h1>Platform We Used</h1>
     <p>Native platforms were chosen based on the User Research to cover all the user segments
     </p>
     <div class="row">
@@ -73,7 +73,7 @@
 <!-- Framework we used -->
 <section class="framework">
   <div class="container">
-     <h1>FRAMEWORK WE USED</h1>
+     <h1>Framework We Used</h1>
      <p>We had chosen React Native & ReactJS with Microservices (Spring Boot) to service all the UI interfaces.</p>
         <div class="row">
             <ul class="list-icons">
@@ -136,7 +136,7 @@
 <section class="other-works">
   <div class="container">
     <div class="other-works-heading">
-        <h3>OTHER WORKS</h3>
+        <h3>Other Works</h3>
     </div>
     <div class="other-works-body">
         <div class="row space">
