--- a/src/app/components/projects/health-care/health-care.component.html
+++ b/src/app/components/projects/health-care/health-care.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <h1>HEALTH CARE SYSTEM</h1>
+        <h1>Health Care System</h1>
         <p>Holistic healthcares system for the healthcare centers in remote hamlets to enable doctors, healthcare workers.
           Adopted by Government of Tamil Nadu for implementation across all the primay healthcare centers.
         </p>
@@ -25,7 +25,7 @@
 <section class="about-project">
   <div class="container">
     <div class="heading">
-      <h1>ABOUT PROJECT</h1>
+      <h1>About Project</h1>
     </div>
     <div class="row">
       <div class="col-md-5">
@@ -105,7 +105,7 @@
     <div class="container">
     <div class="row">
         <div class="col-md-6">
-           <h2> <img src="/assets/images/projects/event-management/em8.png" />CHALLENGES</h2>
+           <h2> <img src="/assets/images/projects/event-management/em8.png" />Challenges</h2>
            <p>- Decidophobia, Dilemma of selecting an option</p>
             <p>- Not having a clarity on the cost of the service</p>
             <p>- How skilled is this service provider?</p>
@@ -114,7 +114,7 @@
             <p>- How to get in touch with the right service provider?</p>
         </div>
         <div class="col-md-6">
-          <h2> <img src="/assets/images/projects/event-management/em8.png" />NEEDS</h2>
+          <h2> <img src="/assets/images/projects/event-management/em8.png" />Needs</h2>
           <p>- Shortlisted set of services that match your budget and spl. occasion</p>
           <p>- Break down of the total cost for the service</p>
           <p>- Similar works, Testimonials, Videos</p>
@@ -131,7 +131,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-5">
-          <h5>Our strategy</h5>
+          <h5>Our Strategy</h5>
           <p>Business segments like Hotel Management, Wedding Halls, Decorators, Photographers, Make-up Artists, Fashion Designers lean more and more into social media (Instagram & Facebook) to showcase their professional services.</p>
         </div>
         <div class="col-md-1"></div>
@@ -187,7 +187,7 @@
 <section class="research">
   <div class="container">
     <div class="heading">
-      <h1>RESEARCH</h1>
+      <h1>Research</h1>
     </div>
     <div class="row">
       <div class="col-md-5">
@@ -241,7 +241,7 @@
     <section class="solution">
       <div class="container">
       <div class="heading">
-        <h1>SOLUTION</h1>
+        <h1>Solution</h1>
       </div>
       <div class="row">
         <div class="col-md-5">
@@ -283,7 +283,7 @@
 <section class="other-works">
   <div class="container">
     <div class="other-works-heading">
-        <h3>OTHER WORKS</h3>
+        <h3>Other Works</h3>
     </div>
     <div class="other-works-body">
         <div class="row space">
