--- a/src/app/components/projects/networking/networking.component.html
+++ b/src/app/components/projects/networking/networking.component.html
@@ -3,8 +3,8 @@
     <div class="heading">
     <div class="row">
       <div class="col-md-5">
-        <h1>NETWORK</h1>
-        <h2>SCALABILITY</h2>
+        <h1>Network</h1>
+        <h2>Scalability</h2>
         <p>Digital Transformation for India's largest telecom network service provider involved redesigning 
           the experience for customers, SMEs and business users. It involved breaking down complex manual process 
           of quote, billing & invoicing that spanned across multiple platforms and CRM systems with high level of 
@@ -24,7 +24,7 @@
               <div class="container">
               <div class="row">
               <div class="col-md-6">
-                <h2>ABOUT PROJECT</h2>
+                <h2>About Project</h2>
               </div>
               <div class="col-md-6">
                 <p>We were approached with redesign of their legacy system that required change in process from the ground-up. 
@@ -103,7 +103,7 @@
               <!-- <div class="container"> -->
                 <div class="row">
                   <div class="col-md-6">
-                    <h2>CHALLENGES</h2>
+                    <h2>Challenges</h2>
                     <!-- <img src="/assets/images/projects/networking/nm10.png" /> -->
                     <p></p>
                     <p>- Heavy dependency on Support Team</p>
@@ -113,7 +113,7 @@
                     <p>- Multiple follow-ups to customers on purchase and billing</p>
                   </div>
                   <div class="col-md-6">
-                    <h2>NEEDS</h2>
+                    <h2>Needs</h2>
                     <!-- <img src="/assets/images/projects/networking/nm10.png" /> -->
                     <p>- Promoting online and on-time payment of invoices</p>
                     <p>- Converting existing offline users to online process</p>
@@ -129,7 +129,7 @@
               <!-- <div class="container"> -->
                 <div class="row">
                   <div class="col-md-5">
-                    <h5>Our strategy</h5>
+                    <h5>Our Strategy</h5>
                     <p>Business segments like Hotel Management, Wedding Halls, Decorators, Photographers, Make-up Artists, Fashion Designers lean more and more into social media (Instagram & Facebook) to showcase their professional services.</p>
                   </div>
                   <div class="col-md-1"></div>
@@ -179,8 +179,8 @@
                 </div>
               <!-- </div> -->
             </div>
-             <h2>DESIGN PROCESS</h2>
-           <div class="row design-process">
+             <!-- <h2>DESIGN PROCESS</h2> -->
+           <!-- <div class="row design-process">
               <div class="col-sm-3">
                 <div class="step-image1">
                   <img src="/assets/images/projects/networking/nm2.png" alt="Network Management"/>
@@ -223,10 +223,10 @@
               <p>- Usability Testing</p>
               <p>- Refine</p>
               </div>
-            </div>
+            </div> -->
             <div class="row  research">
               <div class="col-md-4">
-                <h2>RESEARCH</h2>
+                <h2>Research</h2>
                 <p>Our UX Consultants reached out to customer across India to get qualitative information on the current experience, 
                   areas of enhancement, the expected features, and their feedback. The details received were meticulously analysed and the 
                 benchmarks were set.</p>
@@ -389,7 +389,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12">
-                <h2>DESIGN</h2>
+                <h2>Design</h2>
               </div>
             </div>
             <div class="row">
@@ -422,7 +422,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12">
-                <h2>INTERFACE DESIGN</h2>
+                <h2>Interface Design</h2>
               </div>
             </div>
             <div class="row">
@@ -438,7 +438,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12">
-                <h2>ATOMIC COMPONENTS</h2>
+                <h2>Atomic Components</h2>
               </div>
             </div>
             <div class="row">
@@ -454,7 +454,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12">
-                <h2>SOLUTION REFERENCES</h2>
+                <h2>Solution References</h2>
               </div>
             </div>
             <div class="row">
@@ -494,7 +494,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4">
-                <h2>RESPONSIVE LAYOUT</h2>
+                <h2>Responsive Layout</h2>
                   <p></p>
               </div>
               <div class="col-md-8">
@@ -512,7 +512,7 @@
 <section class="other-works">
   <div class="container">
     <div class="other-works-heading">
-        <h3>OTHER WORKS</h3>
+        <h3>Other Works</h3>
     </div>
     <div class="other-works-body">
       <div class="row space">
