--- a/src/app/components/projects/skill-development/skill-development.component.html
+++ b/src/app/components/projects/skill-development/skill-development.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-5">
         <div class="heading">
-            <h1>SKILL DEVELOPMENT</h1>
+            <h1>Skill Development</h1>
             <p>Platform for designers, design aspirants/students, mentor to collaborate and share their 
               ideology, design method, process and uplift their skills in the Design domain.
             </p>
@@ -27,7 +27,7 @@
 <section class="about-project">
   <div class="container">
     <div class="heading">
-      <h1>ABOUT PROJECT</h1>
+      <h1>About Project</h1>
     </div>
     <div class="row">
       <div class="col-md-5">
@@ -57,7 +57,7 @@
   <!-- About Project -->
 
   <!-- Process -->
-  <section class="process">
+  <!-- <section class="process">
     <div class="container">
         <h1>PROCESS</h1>
     <div class="row">
@@ -103,13 +103,13 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
   <!-- Process -->
 
   <!-- Research -->
 <section class="research">
     <div class="container">
-        <h1>RESEARCH</h1>
+        <h1>Research</h1>
     <div class="row research1">
       <div class="col-md-3">
         <h3>Objective</h3>
@@ -166,7 +166,7 @@
   </div>
   </div>
       <div class="col-md-6">
-        <p>Based on the interviewed data the affinity mapping was done and classified to Personas</p>
+        <!-- <p>Based on the interviewed data the affinity mapping was done and classified to Personas</p> -->
           <div class="step-image">
             <img src="/assets/images/projects/skill-development/research.png" />
         </div>
@@ -181,7 +181,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h3>CHALLENGES</h3>
+        <h3>Challenges</h3>
         <p>- Scope of the awareness in field is less</p>
         <p>- No formal education in design</p>
         <p>- Don't have a portfolio to enter the domain</p>
@@ -189,7 +189,7 @@
         <p>- No Guidance to enhance the Portfolio</p>
       </div>
       <div class="col-md-6">
-        <h3>NEEDS</h3>
+        <h3>Needs</h3>
         <p>- Create awareness among younger generation on Creative Job</p>
         <p>- Understand how the field works</p>
         <p>- Need a mentor to Guide</p>
@@ -204,7 +204,7 @@
 <!-- Design -->
 <section class="design">
   <div class="container">
-    <h1>DESIGN</h1>
+    <h1>Design</h1>
     <div class="row">
       <div class="col-md-3">
         <h3>Feature Mapping</h3>
@@ -237,7 +237,7 @@
 <!-- Interface design -->
 <section class="interface">
   <div class="container">
-    <h1>INTERFACE DESIGN</h1>
+    <h1>Interface Design</h1>
     <div class="design-image step-image">
       <img src="/assets/images/projects/skill-development/interface.png" />
     </div>
@@ -249,7 +249,7 @@
 <section class="components">
   <div class="container">
     <div class="heading">
-    <h1>COMPONENTS</h1>
+    <h1>Components</h1>
   </div>
     <div class="components-image step-image">
       <img src="/assets/images/projects/skill-development/components.png" />
@@ -261,7 +261,7 @@
 <!-- Icons -->
 <section class="icons">
   <div class="container">
-    <h1>ICONS</h1>
+    <h1>Icons</h1>
     <div class="icons-image step-image">
       <img src="/assets/images/projects/skill-development/icons.png" />
     </div>
@@ -272,7 +272,7 @@
 <!-- App -->
 <section class="app">
   <div class="container">
-    <h1>APP VIEW</h1>
+    <h1>App View</h1>
     <div class="app-image step-image">
       <img src="/assets/images/projects/skill-development/image1.png" />
     </div>
@@ -294,7 +294,7 @@
     <section class="web-view">
       <div class="container">
           <div class="heading">
-          <h1>WEB VIEW</h1>
+          <h1>Web View</h1>
           <div class="step-image">
           <img src="/assets/images/projects/skill-development/web-view.png">
         </div>
@@ -329,7 +329,7 @@
 <section class="other-works">
   <div class="container">
     <div class="other-works-heading">
-        <h3>OTHER WORKS</h3>
+        <h3>Other Works</h3>
     </div>
     <div class="other-works-body">
       <div class="row space">
