--- a/src/app/components/projects/social-review/social-review.component.html
+++ b/src/app/components/projects/social-review/social-review.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-6">
         <div class="heading">
-            <h1>SOCIAL MARKETING</h1>
+            <h1>Social Marketing</h1>
             <!-- <h3>Management</h3> -->
             <p>The SaaS product for Customer Advocacy platform to promoting word of mouth review for
               sustainable growth and to increase credibility.
@@ -29,7 +29,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h1>ABOUT PROJECT</h1>
+        <h1>About Project</h1>
       </div>
       <div class="col-md-6">
         <p>The platform allows to collect different source of reviews by business that enables a better reach through customer voice. 
@@ -52,7 +52,7 @@
     <!-- About Project -->
 
     <!-- Process -->
-    <section class="process">
+    <!-- <section class="process">
       <div class="container">
         <h1>PROCESS</h1>
       <div class="row">
@@ -93,13 +93,13 @@
         </div>
       </div>
     </div>
-    </section>
+    </section> -->
     <!-- Process -->
 
     <!-- Research -->
     <section class="research">
       <div class="container">
-          <h1>RESEARCH</h1>
+          <h1>Research</h1>
         <div class="row">
           <div class="col-md-6">
             <h3>Discovery and Analysis</h3>
@@ -130,7 +130,7 @@
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-3">
-        <h3>CHALLENGES</h3>
+        <h3>Challenges</h3>
         <p>- Getting Testimonials</p>
         <p>- Scattered Management</p>
         <p>- Manual Work</p>
@@ -139,7 +139,7 @@
       </div>
       <div class="col-md-2"></div>
       <div class="col-md-3">
-        <h3>NEEDS</h3>
+        <h3>Needs</h3>
         <p>- Fast and Simple Design</p>
         <p>- Track Activity and Daily Tasks</p>
         <p>- Motivation & Appreciation</p>
@@ -157,7 +157,7 @@
 <!-- Interface design -->
 <section class="interface">
   <div class="container">
-      <h1>INTERFACE DESIGN</h1>
+      <h1>Interface Design</h1>
    <div class="image">
   <div class="step-image">
     <img src="/assets/images/projects/social-review/interface.png" />
@@ -170,7 +170,7 @@
 <!-- Design system -->
 <section class="design-system">
   <div class="container">
-      <h1>DESIGN SYSTEM</h1>
+      <h1>Design System</h1>
    <div class="image">
   <div class="step-image">
     <img src="/assets/images/projects/social-review/design-sys.png" />
@@ -183,7 +183,7 @@
 <!-- Icons & illustration -->
 <section class="icons">
   <div class="container">
-    <h1>ICONS & ILLUSTRATION</h1>
+    <h1>Icons & Illustration</h1>
     <div class="image">
       <div class="step-image">
         <img src="/assets/images/projects/social-review/ws.png" />
@@ -200,7 +200,7 @@
 <section class="web-view">
   <div class="container">
       <div class="heading">
-      <h1>WEB VIEW</h1>
+      <h1>Web View</h1>
       <div class="step-image">
       <img src="/assets/images/projects/social-review/social.png">
     </div>
@@ -235,7 +235,7 @@
 <section class="other-works">
   <div class="container">
     <div class="other-works-heading">
-        <h3>OTHER WORKS</h3>
+        <h3>Other Works</h3>
     </div>
     <div class="other-works-body">
       <div class="row space">
