--- a/src/app/components/projects/web-development/web-development.component.html
+++ b/src/app/components/projects/web-development/web-development.component.html
@@ -4,10 +4,10 @@
     <div class="row">
       <div class="col-md-4">
         <div class="case-study">
-          <p>CASE STUDY</p>
+          <p>Case Study</p>
         </div>
         <div class="heading">
-          <h1><span class="text-primary">WEB</span>  DEVELOPMENT</h1>
+          <h1>Web  Development</h1>
           <p>Dashboard for Sales Pitching</p>
         </div>
           <div class="web">
@@ -37,7 +37,7 @@
   <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-5">
-         <h1>ABOUT PROJECT</h1>
+         <h1>About Project</h1>
     </div>
     <div class="col-md-6">
         <p>A Conglomerate with global operation approached us for an Engineering Portal that would serve as a 
@@ -53,7 +53,7 @@
 <!-- Platform we used -->
 <section class="platform">
   <div class="container">
-    <h1>PLATFORM WE USED</h1>
+    <h1>Platform We Used</h1>
     <p>Based on our analysis the portal was to be used in bigger screens for presentations by Sales Teams for Pitching
        & Admin to feed historic project data.
     </p>
@@ -68,7 +68,7 @@
 <!-- Framework we used -->
 <section class="framework">
   <div class="container">
-     <h1>FRAMEWORK WE USED</h1>
+     <h1>Framework We Used</h1>
      <p>Angular, Google Charts, Java (Spring Boot) were the frameworks used since this application required scalability and 
        future enhancements to portable devices.
      </p>
@@ -102,7 +102,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-    <h1>WHAT WE DID</h1>
+    <h1>What We Did</h1>
   </div>
   </div>
     <div class="row">
@@ -133,7 +133,7 @@
 <section class="web-view">
   <div class="container">
       <div class="heading">
-      <h1>WEB VIEW</h1>
+      <h1>Web View</h1>
       <div class="step-image">
       <img src="/assets/images/projects/web-development/web-dev.png">
     </div>
@@ -169,7 +169,7 @@
 <section class="other-works">
   <div class="container">
     <div class="other-works-heading">
-        <h3>OTHER WORKS</h3>
+        <h3>Other Works</h3>
     </div>
     <div class="other-works-body">
       <div class="row space">
