--- a/src/app/components/services/front-end-development/development.component.scss
+++ b/src/app/components/services/front-end-development/development.component.scss
@@ -102,7 +102,7 @@ p{
         .list{
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Sans JP', sans-serif;
+            font-family: 'Noto Serif JP', serif;
             margin-left: 4px;
         }
     }
@@ -298,7 +298,7 @@ p{
             font-size: 35px;
             font-weight: 400;
             text-align: left;
-            font-family: 'Noto Serif JP', serif;
+            //font-family: 'Noto Serif JP', serif;
         }
         .step-image{
             width: 60%;
@@ -308,7 +308,7 @@ p{
         }
         p{
             font-size: 13px;
-            font-weight: 300;
+            font-weight: 400;
             text-align: justify;
             margin-top: 10px;
         }
@@ -333,36 +333,26 @@ p{
             .list{
                 font-size: 13px;
                 margin-left: 21px;
-                font-weight: 400;
-                font-family: 'Noto Sans JP', sans-serif;
             }
         }
         .img2{
             .list{
                 margin-left: 20px;
-                font-family: 400;
-                font-family: 'Noto Sans JP', sans-serif;
             }
         }
         .img3{
             .list{
                 margin-left: 22px;
-                font-family: 400;
-                font-family: 'Noto Sans JP', sans-serif;
             }
         }
         .img4{
             .list{
                 margin-left: 24px;
-                font-family: 400;
-                font-family: 'Noto Sans JP', sans-serif;
             }
         }
         .img5{
             .list{
                 margin-left: 19px;
-                font-family: 400;
-                font-family: 'Noto Sans JP', sans-serif;
             }
         }
     }
