--- a/src/app/components/services/ux-consulting/ux-consulting.component.scss
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.scss
@@ -90,7 +90,7 @@ p{
         .list{
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Sans JP', sans-serif;
+            font-family: 'Noto Serif JP', serif;
             margin-left: 10px;
         }
     }
@@ -102,7 +102,7 @@ p{
         .list{
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Sans JP', sans-serif;
+            font-family: 'Noto Serif JP', serif;
             margin-left: 4px;
         }
     }
@@ -274,7 +274,7 @@ p{
             span{
                 font-size: 13px;
                 font-weight: 400;
-                font-family: 'Noto Sans JP', sans-serif;
+                //font-family: 'Noto Sans JP', sans-serif;
                 margin-left: 10px;
             }
         }
