--- a/src/app/components/projects/event-management/event-management.component.scss
+++ b/src/app/components/projects/event-management/event-management.component.scss
@@ -14,20 +14,24 @@
 h2{
     color: #FF7E86;
     font-size: 50px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif JP', serif;
     text-align: left;
     margin-top: 100px;
 }
 h5{
     color: #6C6C6C;
     font-size: 40px;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Noto Serif JP', serif;
     text-align: left;
 }
 p{
     text-align: justify;
     font-size: 14px;
-    font-weight: 100;
+    font-weight: 400;
+    font-family: 'Noto Sans JP', sans-serif;
+    margin-top: 20px;
 }
 .step-image img {
     height: auto;
@@ -49,7 +53,7 @@ p{
     }
     p{
         font-size: 13px;
-        line-height: 25px;
+        line-height: 20px;
     }
     .step-image img{
         width: 80%;
@@ -67,24 +71,28 @@ p{
     }
     h2{
         font-size: 40px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
         text-align: left;
     }
     p{
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
         color: #575757;
-        margin-top: 30px;
+        margin-top: 10px;
         text-align: justify;
     }
     h5{
         color: #6C6C6C;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
         font-size: 14px;
     }
     h6{
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
     }
 }
 
@@ -96,11 +104,12 @@ p{
     }
     h2{
         font-size: 25px;
+        margin-bottom: 15px;
     }
     p{
         font-size: 13px;
-        margin-top: 10px;
-        line-height: 25px;
+        margin-top: 0px;
+        line-height: 20px;
     }
     h5{
         font-size: 13px;
@@ -124,23 +133,27 @@ p{
         padding-right: 0;
     }
     h5{
-        font-size: 24px;
-        font-weight: 300;
+        font-size: 40px;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
     }
     p{
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
         color: #575757;
         margin-top: 20px;
         text-align: justify;
     }
     h3{
         font-size: 47px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
     }
     h4{
         font-size: 16px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
     }
     img{
         margin-top: 30px;
@@ -149,9 +162,10 @@ p{
 @include media-breakpoint-down(md) {
     .existing{
         padding-top: 40px;
-        margin-bottom: 30px;
+        margin-bottom: 50px;
     h5{
-        font-size: 17px;
+        font-size: 25px;
+        margin-bottom: 15px;
     }
     p{
         font-size: 13px;
@@ -190,23 +204,27 @@ p{
         padding-right: 0;
     }
     h5{
-        font-size: 24px;
-        font-weight: 300;
+        font-size: 40px;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
     }
     p{
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
         color: #575757;
         margin-top: 20px;
         text-align: justify;
     }
     h3{
         font-size: 47px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
     }
     h4{
         font-size: 16px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
     }
     img{
         margin-top: 30px;
@@ -215,10 +233,11 @@ p{
 @include media-breakpoint-down(md) {
     .strategy{
         padding-top: 50px;
-        padding-bottom: 20px;
+        padding-bottom: 40px;
         margin-bottom: 0px;
     h5{
-        font-size: 17px;
+        font-size: 25px;
+        margin-bottom: 15px;
     }
     p{
         font-size: 13px;
@@ -245,90 +264,94 @@ p{
 }
 }
 
-.layout3{
-    .row{
-        margin-bottom: 100px;
-    }
-    h2{
-        font-size: 40px;
-        font-weight: 300;
-        margin-bottom: -84px;
-        text-align: left;
-        margin-top: 20px;
-    }
-    h6{
-        font-size: 24px;
-        font-weight: 300;
-        color: #808080;
-    }
-    p{
-        font-size: 14px;
-        font-weight: 300;
-        color: #888888;
-        text-align: justify;
-    }
-    .vertical1 { 
-        border-left: 1px solid #CBCBCB;
-        height: 257px;
-        position: absolute;
-        left: 28%;
-    } 
-    .vertical2 { 
-        border-left: 1px solid #CBCBCB;
-        height: 257px;
-        position: absolute;
-        left: 46%;
-    } 
-    .vertical3 { 
-        border-left: 1px solid #CBCBCB;
-        height: 257px;
-        position: absolute;
-        left: 65%;
-    } 
-    .step-image1 img {
-        height: auto;
-        width: auto;
-        margin-bottom: 10px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
+// .layout3{
+//     .row{
+//         margin-bottom: 100px;
+//     }
+//     h2{
+//         font-size: 40px;
+//         font-weight: 400;
+//         font-family: 'Noto Serif JP', serif;
+//         margin-bottom: -84px;
+//         text-align: left;
+//         margin-top: 20px;
+//     }
+//     h6{
+//         font-size: 24px;
+//         font-weight: 400;
+//         font-family: 'Noto Sans JP', sans-serif;
+//         color: #808080;
+//     }
+//     p{
+//         font-size: 14px;
+//         font-weight: 400;
+//         font-family: 'Noto Sans JP', sans-serif;
+//         color: #888888;
+//         text-align: justify;
+//     }
+//     .vertical1 { 
+//         border-left: 1px solid #CBCBCB;
+//         height: 257px;
+//         position: absolute;
+//         left: 28%;
+//     } 
+//     .vertical2 { 
+//         border-left: 1px solid #CBCBCB;
+//         height: 257px;
+//         position: absolute;
+//         left: 46%;
+//     } 
+//     .vertical3 { 
+//         border-left: 1px solid #CBCBCB;
+//         height: 257px;
+//         position: absolute;
+//         left: 65%;
+//     } 
+//     .step-image1 img {
+//         height: auto;
+//         width: auto;
+//         margin-bottom: 10px;
+//         margin-left: auto;
+//         margin-right: auto;
+//     }
+// }
 
-@include media-breakpoint-down(md) {
-.layout3{
-    .row{
-        margin-bottom: 20px;
-    }
-       h2{
-           font-size: 25px;
-           margin-bottom: 10px;
-           margin-top: 30px;
-        }
-        .vertical1, .vertical2, .vertical3 { 
-            display: none;
-        } 
-          h6{
-            font-size: 17px;
-            color: #808080;
-        }
-        p{
-            font-size: 13px;
-            line-height: 20px;
-        }
-          .col-sm-3{
-              //width: 40%;
-              padding-left: 40px;
-              padding-bottom: 20px;
-          }
-    }
-}
+// @include media-breakpoint-down(md) {
+// .layout3{
+//     .row{
+//         margin-bottom: 20px;
+//     }
+//        h2{
+//            font-size: 25px;
+//            margin-bottom: 10px;
+//            margin-top: 30px;
+//         }
+//         .vertical1, .vertical2, .vertical3 { 
+//             display: none;
+//         } 
+//           h6{
+//             font-size: 17px;
+//             color: #808080;
+//         }
+//         p{
+//             font-size: 13px;
+//             line-height: 20px;
+//         }
+//           .col-sm-3{
+//               //width: 40%;
+//               padding-left: 40px;
+//               padding-bottom: 20px;
+//           }
+//     }
+// }
 
 .layout4{
     .research{
         margin-bottom: 80px;
     h2{
         font-size: 40px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
         margin-bottom: -84px;
         text-align: left;
     }
@@ -336,20 +359,24 @@ p{
     .research1{
         margin-bottom: -135px;
     h3{
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
         font-size: 24px;
     }
     h4{
         font-size: 12px;
         font-weight: 700;
+        font-family: 'Noto Sans JP', sans-serif;
     }
     h6{
         font-size: 10px;
+        font-family: 'Noto Sans JP', sans-serif;
         color: #626262;
     }
     p{
         color: #6F6F6F;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
         font-size: 14px;
         text-align: left;
     }
@@ -371,25 +398,33 @@ p{
         h5{
             color: #2A2A2A;
             font-size: 24px;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Serif JP', serif;
         }
         p{
             color: #6F6F6F;
-            font-weight: 300;
+            font-weight: 400;
+            font-family: 'Noto Sans JP', sans-serif;
             font-size: 14px;
             text-align: justify;
         }
-        .step-image img{
-            filter: #606A74; 
-            -webkit-filter: grayscale(1);
+        .step-image{
+            text-align: left;
+            img{
+                width: 80%;
+            }
         }
-        .step-image img:hover{
-            filter: none; 
-            -webkit-filter: grayscale(0);
-        }
+        // .step-image img{
+        //     filter: #606A74; 
+        //     -webkit-filter: grayscale(1);
+        // }
+        // .step-image img:hover{
+        //     filter: none; 
+        //     -webkit-filter: grayscale(0);
+        // }
         .step-image1{
-            margin-top: 89px;
-            margin-bottom: 80px;
+            margin-top: 30px;
+            margin-bottom: 30px;
         }
         .profile{
             margin-left: 10px;
@@ -414,17 +449,18 @@ p{
 
 @include media-breakpoint-down(md) {
 .layout4{
+    margin-top: 40px;
     .research{
         margin-bottom: 10px;
     h2{
-        font-size: 40px;
+        font-size: 25px;
         margin-bottom: 10px;
     }
 }
     .research1{
             margin-bottom: -135px;
     h3{
-        font-size: 20px;
+        font-size: 17px;
     }
     h4{
         font-size: 12px;
@@ -434,7 +470,7 @@ p{
     }
     p{
         font-size: 13px;
-        line-height: 25px;
+        line-height: 20px;
         margin-bottom: 30px;
     }
         .vertical1, .vertical2{ 
@@ -448,12 +484,12 @@ p{
         .research2{
             margin-bottom: 70px;
             h5{
-                font-size: 20px;
+                font-size: 17px;
                 margin-top: 110px;
             }
             p{
                 font-size: 13px;
-                line-height: 25px;
+                line-height: 20px;
             }
             .step-image1{
                 margin-top: 30px;
@@ -478,7 +514,8 @@ p{
     padding-bottom: 60px;
     h2{
         font-size: 40px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
         color: #FFFFFF;
         text-align: left;
         padding-top: 20px;
@@ -487,7 +524,8 @@ p{
     p{
         font-size: 14px;
         color: #FFFFFF;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: justify;
         margin-bottom: 5px;
     }
@@ -521,25 +559,28 @@ p{
         max-width: 1240px;
     }
     .row{
-        margin-bottom: 30px;
-        margin-top: 30px;
+        margin-bottom: 20px;
+        margin-top: 20px;
     }
     h2{
         font-size: 40px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
         color: #000000;
         text-align: left;
     }
     h5{
         font-size: 24px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
         color: #000000;
         text-align: left;
     }
     p{
         font-size: 15px;
         color: #6F6F6F;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: left;
     }
     .step-image img{
@@ -557,8 +598,8 @@ p{
 @include media-breakpoint-down(md) {
 .layout6{
     .row{
-        margin-bottom: 30px;
-        margin-top: 30px;
+        margin-bottom: 10px;
+        margin-top: 10px;
     }
         h2{
             font-size: 25px;
@@ -577,7 +618,8 @@ p{
     background-color: #2C2C2C;
     h2{
         font-size: 40px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
         color: #FFFFFF;
         text-align: left;
         margin-bottom: 100px;
@@ -602,32 +644,41 @@ p{
 .layout8{
     margin-top: -135px;
     .row{
-        margin-bottom: 30px;
-        margin-top: 40px;
+        margin-bottom: 20px;
+        margin-top: 20px;
     }
     h2{
         font-size: 40px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
         color: #000000;
         text-align: left;
     }
     p{
         font-size: 14px;
         color: #6F6F6F;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: justify;
+    }
+    .step-image{
+        margin-bottom: 30px;
     }
 }
 
 @include media-breakpoint-down(md) {
 .layout8{
-        margin-top: -25px;
+        margin-top: -15px;
+        .row{
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
         h2{
             font-size: 25px;
         }
         p{
             font-size: 13px;
-            line-height: 25px;
+            line-height: 20px;
         }
     }
 }
@@ -640,7 +691,8 @@ p{
     }
     h2{
         font-size: 40px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
         color: #6C6C6C;
         text-align: left;
         margin-top: 60px;
@@ -648,7 +700,8 @@ p{
     p{
         font-size: 14px;
         color: #6F6F6F;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: justify;
     }
 }
@@ -660,7 +713,7 @@ p{
         }
         p{
             font-size: 13px;
-            line-height: 25px;
+            line-height: 20px;
         }
     }
 }
@@ -674,15 +727,18 @@ p{
     }
     h2{
         font-size: 40px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
         color: #FFFFFF;
         text-align: left;
         margin-top: 60px;
+        margin-bottom: 20px;
     }
     p{
         font-size: 14px;
         color: #FFFFFF;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: left;
         margin-bottom:2px;
     }
@@ -715,10 +771,15 @@ p{
         }
         h2{
             font-size: 25px;
+            margin-top: 40px;
         }
         p{
             font-size: 13px;
-            line-height: 25px;
+            line-height: 20px;
+        }
+        .step-image img{
+            width: 101%;
+            height: auto;
         }
     }
 }
@@ -731,7 +792,8 @@ p{
     }
     h2{
         font-size: 40px;
-        font-weight: 300;
+        font-weight: 400;
+        font-family: 'Noto Serif JP', serif;
         color: #FFFFFF;
         text-align: left;
         margin-top: 60px;
