--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2>Our <span class="highlight">Case Studies</span></h2>
+                <h2>Our Case Studies</h2>
                 <p>We have worked in stages of incubation, revival and next leap
                 </p>
             </div>
