--- a/src/app/components/services/visual-design/visual-design.component.scss
+++ b/src/app/components/services/visual-design/visual-design.component.scss
@@ -75,21 +75,11 @@ h5{
         p{
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Sans JP', sans-serif;
+            font-family: 'Noto Serif JP', serif;
             margin-top: 10px;
             text-align: center;
         }
     }
-    // .col-md-2{
-    //     padding-left: 0px;
-    //     padding-right: 0px;
-    //     // width: 80%;
-    // }
-    // .col-md-1{
-    //     padding-left: 20px;
-    //     padding-right: 20px;
-    //     // width: 80%;
-    // }
 }
 
 // .searvice-jumbotron{
@@ -97,7 +87,7 @@ h5{
 //     //margin-top: -15px;
 //     h5{
 //         font-size: 50px;
-//         font-weight: 300;
+//         font-weight: 400;
 //         text-align: left;
 //         //margin-bottom: 30px;
 //         margin-top: 125px;
@@ -105,7 +95,7 @@ h5{
 //     p{
 //         color: #797979;
 //         font-size: 14px;
-//         font-weight: 300;
+//         font-weight: 400;
 //         text-align: justify;
 //         margin-bottom: 30px;
 //     }
@@ -120,7 +110,7 @@ h5{
 //         p{
 //             color: #797979;
 //             font-size: 13px;
-//             font-weight: 300;
+//             font-weight: 400;
 //             text-align: center;
 //             margin-bottom: 28px;
 //             margin-top: 14px; 
@@ -422,7 +412,7 @@ h5{
             font-size: 35px;
             font-weight: 400;
             text-align: left;
-            font-family: 'Noto Serif JP', serif;
+            //font-family: 'Noto Serif JP', serif;
         }
         .step-image{
             width: 60%;
@@ -432,7 +422,7 @@ h5{
         }
         p{
             font-size: 13px;
-            font-weight: 300;
+            font-weight: 400;
             text-align: justify;
             margin-top: 10px;
         }
@@ -445,7 +435,7 @@ h5{
             }
             p{
                 font-size: 13px;
-                font-weight: 300;
+                font-weight: 400;
                 margin-bottom: 40px;
                 text-align: left;
                 margin-top: -25px;
